--- a/antiguo_testamento.html
+++ b/antiguo_testamento.html
@@ -12,7 +12,7 @@
         <ul class="lista">
             <li><a href="libros\genesis.html">Génesis</a></li>
             <li><a href="libros\exodo.html">Éxodo</a></li>
-            <li><a href="libros\levítico.html">Levítico</a></li>
+            <li><a href="libros\levitico.html">Levítico</a></li>
             <li><a href="libros\numeros.html">Números</a></li>
             <li><a href="libros\deuteronomio.html">Deuteronomio</a></li>
             <li><a href="libros\josue.html">Josué</a></li>
