--- a/antiguo_testamento_audio.html
+++ b/antiguo_testamento_audio.html
@@ -96,7 +96,7 @@ li {
         <ul class="lista">
             <li><a href="album\genesis.html">Génesis</a></li>
             <li><a href="album\exodo.html">Éxodo</a></li>
-            <li><a href="album\levítico.html">Levítico</a></li>
+            <li><a href="album\levitico.html">Levítico</a></li>
             <li><a href="album\numeros.html">Números</a></li>
             <li><a href="album\deuteronomio.html">Deuteronomio</a></li>
             <li><a href="album\josue.html">Josué</a></li>
