--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
     <title></title>
 </head>
 <body>
+    <h1>La Biblia</h1>
     <div class="grid-container">
 
         <ul class="">
-            <li class="grid-items"><a href="antiguo_testamento_audio.html"><img class="iconos" src="album\cover\antiguo_testamento_audio.png" alt=""></a></li>
+            <li class="grid-items"><a href="libros\antiguo_testamento_txt.html"><img class="iconos" src="libros\img\antiguo_testamento_txt.png" alt=""></a></li>
+        <li class="grid-items pie"></li>
         </ul>
 
         <ul class="">
-            <li class="grid-items"><a href="nuevo_testamento_audio.html"><img class="iconos" src="album\cover\nuevo_testamento_audio.png" alt=""></a></li>
+            <li class="grid-items"><a href="libros\nuevo_testamento_txt.html"><img class="iconos" src="libros\img\nuevo_testamento_txt.png" alt=""></a></li>
+        <li class="grid-items pie"></li>
         </ul>
 
         <ul class="">
-            <li class="grid-items"><a href="antiguo_testamento.html"><img class="iconos" src="album\cover\antiguo_testamento.png" alt=""></a></li>
+            <li class="grid-items"><a href="libros\antiguo_testamento_audio.html"><img class="iconos" src="libros\img\antiguo_testamento_audio.png" alt=""></a></li>
         </ul>
 
         <ul class="">
-            <li class="grid-items"><a href="nuevo_testamento.html"><img class="iconos" src="album\cover\nuevo_testamento.png" alt=""></a></li>
+            <li class="grid-items"><a href="libros\nuevo_testamento_audio.html"><img class="iconos" src="libros\img\nuevo_testamento_audio.png" alt=""></a></li>
         </ul>
 
 </div>  
+    </div>  
 </body>
 </html>
