--- a/libros/audio-2_cronicas.html
+++ b/libros/audio-2_cronicas.html
@@ -47,182 +47,182 @@
     </html>
     <script>
         let songList = [
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 1",
 audio:"https://archive.org/download/MCATA/AT/14/01.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 2",
 audio:"https://archive.org/download/MCATA/AT/14/02.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 3",
 audio:"https://archive.org/download/MCATA/AT/14/03.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 4",
 audio:"https://archive.org/download/MCATA/AT/14/04.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 5",
 audio:"https://archive.org/download/MCATA/AT/14/05.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 6",
 audio:"https://archive.org/download/MCATA/AT/14/06.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 7",
 audio:"https://archive.org/download/MCATA/AT/14/07.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 8",
 audio:"https://archive.org/download/MCATA/AT/14/08.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 9",
 audio:"https://archive.org/download/MCATA/AT/14/09.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 10",
 audio:"https://archive.org/download/MCATA/AT/14/10.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 11",
 audio:"https://archive.org/download/MCATA/AT/14/11.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 12",
 audio:"https://archive.org/download/MCATA/AT/14/12.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 13",
 audio:"https://archive.org/download/MCATA/AT/14/13.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 14",
 audio:"https://archive.org/download/MCATA/AT/14/14.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 15",
 audio:"https://archive.org/download/MCATA/AT/14/15.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 16",
 audio:"https://archive.org/download/MCATA/AT/14/16.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 17",
 audio:"https://archive.org/download/MCATA/AT/14/17.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 18",
 audio:"https://archive.org/download/MCATA/AT/14/18.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 19",
 audio:"https://archive.org/download/MCATA/AT/14/19.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 20",
 audio:"https://archive.org/download/MCATA/AT/14/20.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 21",
 audio:"https://archive.org/download/MCATA/AT/14/21.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 22",
 audio:"https://archive.org/download/MCATA/AT/14/22.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 23",
 audio:"https://archive.org/download/MCATA/AT/14/23.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 24",
 audio:"https://archive.org/download/MCATA/AT/14/24.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 25",
 audio:"https://archive.org/download/MCATA/AT/14/25.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 26",
 audio:"https://archive.org/download/MCATA/AT/14/26.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 27",
 audio:"https://archive.org/download/MCATA/AT/14/27.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 28",
 audio:"https://archive.org/download/MCATA/AT/14/28.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 29",
 audio:"https://archive.org/download/MCATA/AT/14/29.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 30",
 audio:"https://archive.org/download/MCATA/AT/14/30.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 31",
 audio:"https://archive.org/download/MCATA/AT/14/31.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 32",
 audio:"https://archive.org/download/MCATA/AT/14/32.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 33",
 audio:"https://archive.org/download/MCATA/AT/14/33.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 34",
 audio:"https://archive.org/download/MCATA/AT/14/34.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 35",
 audio:"https://archive.org/download/MCATA/AT/14/35.mp3",
 artistname:"2 Crónicas",},
 
-{thumbnail:"2_crónicas.png",
+{thumbnail:"2_cronicas.png",
 songname:"Capítulo 36",
 audio:"https://archive.org/download/MCATA/AT/14/36.mp3",
 artistname:"2 Crónicas",},
