--- a/la-biblia.html
+++ b/la-biblia.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title></title>
+    <title>LA BIBLIA</title>
 </head>
 <body>
     <h1>LA BIBLIA</h1>
     <div class="grid-container">
 
         <ul class="">
-            <li class="grid-items"><a href="la-biblia.html"><img class="iconos" src="libros\img\biblia2.png" alt=""></a></li>
+            <li class="grid-items"><a href="libros\antiguo_testamento_txt.html"><img class="iconos" src="libros\img\antiguo_testamento_txt.png" alt=""></a></li>
         </ul>
 
         <ul class="">
-            <li class="grid-items"><a href="audiobiblia.html"><img class="iconos" src="libros\img\audiobiblia2.png" alt=""></a></li>
+            <li class="grid-items"><a href="libros\nuevo_testamento_txt.html"><img class="iconos" src="libros\img\nuevo_testamento_txt.png" alt=""></a></li>
         </ul>
 
 </div>  
